# QT6_Basic

./: Qt_creator_help.md  README.md  help.md
Basic/: Basic.md
Basic/15_bug/: glwidget.cpp  mainwindow.cpp  mainwindow.h
Basic/16_qt_TransparentCircle_2/: glwindow.h
Basic/17_qt_TransparentCircle_3/: glwindow.h
Basic/18_qt_TransparentCircle_4/: glwindow.cpp
Basic/19_qt_TransparentCircle_5/: glwindow.cpp  glwindow.h  main.cpp
Basic/Day_0001/: CMakeLists.txt  main.cpp
Basic/Day_0002_Label/: CMakeLists.txt  main.cpp
Basic/Day_0003_buttons/: CMakeLists.txt  awesome_button.cpp  awesome_button.h  label_update.cpp  label_update.h  main.cpp
Basic/Day_0004_toolbar/: CMakeLists.txt  help.md  mainwindow.cpp  mainwindow.h
Basic/Day_0005_MySQL/: CMakeLists.txt  help.md  main.cpp  productmanager.cpp  productmanager.h
Basic/Day_0006_QTextEdit/: main.cpp
Basic/Day_0007_QTextEdit2/: main.cpp
Basic/Day_0008_QTextSimple/: CMakeLists.txt  main.cpp
Basic/Day_0009_Qgrid/: help.md  main.cpp
Basic/Day_0010_Qgrid2/: gridmanager.cpp  gridmanager.h  main.cpp
Basic/Day_0011_Qgrid_sudoko_help/: CMakeLists.txt  gridmanager.cpp  gridmanager.h  main.cpp
Basic/Day_0012_Qgrid_sudoko_Solver/: sudokusolver.cpp  sudokusolver.h
Basic/Day_0012_Qgrid_sudoko_Solver2/: CMakeLists.txt  main.cpp  sudokusolver.cpp
Basic/Day_0013_Qgrid_sudoko_Solver_final/: CMakeLists.txt  gcode_gen.out  sudokusolver.cpp  sudokusolver.h
Basic/Day_0014_qt_TransparentCircle/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Basic/Day_0015_bug/: CMakeLists.txt  glwidget.h
Basic/Day_0016_qt_TransparentCircle_2/: CMakeLists.txt  glwindow.cpp  main.cpp
Basic/Day_0017_qt_TransparentCircle_3/: glwindow.cpp
Basic/Day_0020_Drwa_2D_v1/: DrawingWidget.cpp  DrawingWidget.h  MainWindow.cpp  MainWindow.h
Basic/Day_0021_Drwa_2D_v2/: DrawingWidget.cpp  DrawingWidget.h  MainWindow.cpp  MainWindow.h
Basic/Day_0022_Drwa_2D_v3/: CMakeLists.txt  DrawingWidget.cpp  DrawingWidget.h  MainWindow.cpp
Basic/stencil_qt/: CMakeLists.txt
Basic/stencil_qt/src/: ImageViewer.cpp  ImageViewer.hpp  MainWindow.cpp  MainWindow.hpp  ProcessingWidget.cpp  ProcessingWidget.hpp  StencilGenerator.cpp  StencilGenerator.hpp  main.cpp
Basic/stencil_qt/src/resources/: icons.qrc
CPP/: help.md
CPP/basic_0001/: CMakeLists.txt  stencil_generator.cpp  stencil_generator.hpp
CPP/basic_0001/examples/: stencil_example.cpp
Qt_creator/QTamil_QDebug/: CMakeLists.txt  day1_ta_IN.qm  day1_ta_IN.ts  main.cpp
Qt_creator/QtPolymorphismDemo/: CMakeLists.txt  main.cpp
Sample_Site_py/: backend.py  bot.py  index.html  study.md
webengine/: CMakeLists.txt  main.cpp
